# 20251002-apigw-lambda-app

./: .env.sample  .env.test  .pre-commit-config.yaml  mise.toml  pyproject.toml
.github/workflows/: deploy.yaml
src/: my_func.py  send_email.py  tracer.py
tests/: conftest.py  helpers.py  test_add_user.py  test_main.py  test_sample.py  test_send_email.py
