[project]
name = "20251002-apigw-lambda-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools[parser]>=3.20.0",
    "pydantic[email]>=2.11.9",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
]
